--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   "homepage": "https://github.com/ravenruckus/blog_maker#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "boom": "^4.2.0",
     "express": "^4.14.0",
-    "morgan": "^1.7.0"
+    "humps": "^2.0.0",
+    "knex": "^0.12.6",
+    "morgan": "^1.7.0",
+    "pg": "^6.1.2"
   },
   "devDependencies": {
+    "dotenv": "^4.0.0",
     "nodemon": "^1.11.0"
   }
 }
