--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "boom": "^4.2.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-validation": "^1.0.1",
     "humps": "^2.0.0",
+    "joi": "^9.2.0",
     "jsonwebtoken": "^7.2.1",
     "knex": "^0.12.6",
     "morgan": "^1.7.0",
