--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog_maker",
   "version": "1.0.0",
-  "description": "",
+  "description": "blogmaker",
   "main": "knex.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -35,5 +35,6 @@
   "devDependencies": {
     "dotenv": "^4.0.0",
     "nodemon": "^1.11.0"
-  }
+  },
+  "keywords": []
 }
