Close #64 Lint js files.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "knex": "knex",
     "heroku-postbuild": "knex migrate:latest",
     "nf": "nf start",
-    "nodemon": "nodemon server.js"
+    "nodemon": "nodemon server.js",
+    "lint": "eslint"
   },
   "engines": {
     "node": "7.2.1"
@@ -40,6 +41,8 @@
   },
   "devDependencies": {
     "dotenv": "^4.0.0",
+    "eslint": "^3.14.0",
+    "eslint-config-ryansobol": "^10.0.2",
     "foreman": "^2.0.0",
     "nodemon": "^1.11.0"
   },
